# heaplessNights

./: .gitignore  CREDENTIALS_CONFIG_COMPLETE.md  DEPLOYMENT_VALIDATION.md  DOCKER_IMPLEMENTATION_COMPLETE.md  FINAL_VALIDATION_DOCKER_AND_CREDENTIALS.md  PRODUCTION_READINESS.md  README.md  STUB_COMPLETION_REPORT.md  TEST_WINDOWS.bat  VALIDATE_100_PERCENT.bat  WINDOWS_FIX_APPLIED.md  WORLD_CLASS_IMPROVEMENTS.md  check_jenkins.bat  fix_and_install.sh  fix_docker_compose_commands.ps1  fix_line_endings.bat  fix_line_endings.ps1  fix_line_endings.sh  fix_line_endings_scripts.ps1  fix_prod_check.bat  hosts_addition.txt  install_deps.bat  install_deps.sh  install_pip.bat  install_simple.txt  install_wsl_deps.ps1  integration_test.bat  integration_test.sh  run_complete_test.bat  run_exploit_validation.bat  run_install.ps1  run_integration_test.bat  run_production_check.bat  run_validation.bat  run_wsl_test.ps1  test_decrypt.sh  test_decrypt_fixed.sh  test_jenkins.sh  test_jenkins_exploits.sh  test_jenkins_fixed.sh  (+5 more)
JenkinsBreaker/: .gitignore  CONTRIBUTING.md  JenkinsBreaker.py  LICENSE  OFFSEC_JENKINS_INTEGRATION.md  README.md  SECRETS_EXTRACTION_GUIDE.md  TEST_CVE_BATCH_1.md  WSL_TESTING_COMPLETE_GUIDE.md  WSL_TESTING_SUMMARY.md  comprehensive_test.py  jenkinsfuzzer.py  jwt_breaker.py  launch_tui.py  launch_webui.py  persistence.py  plugin_fingerprint.py  reporting.py  requirements.txt  test_automation_fingerprinting.py  test_batch2_modules.py  test_batch3.py  test_batch3_structure.py  test_cve_modules.py  test_groovy_read.py  test_integration.py  test_privesc.py  test_rce.py  test_reporting.py  test_secrets_extraction.py  tui.py  validate_exploits.py  web_ui.py
JenkinsBreaker/examples/: full_workflow_example.sh
JenkinsBreaker/exploits/: README.md  __init__.py  cve_2017_1000353.py  cve_2018_1000402.py  cve_2018_1000600.py  cve_2018_1000861.py  cve_2019_1003000.py  cve_2019_1003001.py  cve_2019_1003029.py  cve_2019_1003040.py  cve_2019_10358.py  cve_2020_2100.py  cve_2020_2249.py  cve_2021_21686.py  cve_2023_24422.py  cve_2023_3519.py  cve_2024_23897.py  cve_2024_43044.py  cve_2025_31722.py
JenkinsBreaker/jenkins-lab/: .gitignore  100_PERCENT_VALIDATION_RESULTS.md  ADVANCED_FRAMEWORKS.md  COMPLETE_TEST_SUITE.sh  EXPLOIT_VALIDATION.sh  FINAL_VALIDATION.sh  PRODUCTION_READINESS_CHECK.sh  PRODUCTION_VALIDATION.md  README.md  README_CREDENTIALS.md  SCRIPTS_SUMMARY.md  SECRETS_REFERENCE.md  SECURITY_NOTICE.md  WSL_TESTING_GUIDE.md  check_jenkins_status.sh  docker-compose.yml  start_lab.sh  test_jenkins_quick.sh
JenkinsBreaker/payloads/: .gitignore
QuantumForge/: .gitignore  ANTI_ANALYSIS_VERIFICATION.md  CLI_FLAGS_VERIFICATION.md  CMakeLists.txt  DOH_C2_IMPLEMENTATION.md  Doxyfile  LINUX_LOADER_ENHANCEMENTS.md  LOGGING_AND_TESTING.md  LOGGING_TESTING_COMPLETE.md  POLYGLOT_IMPLEMENTATION.md  README.md  WINDOWS_REFLECTIVE_DLL_LOADER.md  WORLD_CLASS_ENHANCEMENTS.md  anti_analysis.h  compile_all.sh  extract_polyglot.ps1  extract_polyglot.sh  generate_junk.py  qf_crypto.h  qf_error.h  qf_logging.h  qf_seccomp.h  quantum_forge.sh  quantum_forge_mac.sh  quantum_forge_win.ps1  quantum_loader_mac.c  quantum_loader_win.c  quantumserver.c  scrub_sections.py  test_anti_analysis.bat  test_anti_analysis.sh
QuantumForge/.github/workflows/: ci.yml
QuantumForge/tests/: IMPLEMENTATION_SUMMARY.md  README.md  README_REFLECTIVE_LOADER_TEST.md  REFLECTIVE_DLL_VERIFICATION.md  build_and_test.bat  build_test_dll.bat  compile_test.sh  comprehensive_wsl_test.sh  full_wsl_verification.sh  run_tests_wsl.sh  test_crypto_unit.c  test_dll.c  test_doh_c2.ps1  test_doh_c2.sh  test_doh_server.py  test_loader_linux.sh  test_loader_mac.sh  test_loader_win.ps1  test_payload.c  test_polyglot.ps1  test_polyglot.sh  test_reflective_loader.c  test_so.c  test_wsl.bat
obscura/: .gitignore  .gitignore.opsec  README.md  check_capabilities.py  pyproject.toml  pytest.ini  requirements.txt  test_attack_graph.py  test_ble_attacks.bat  test_ble_plugin.py  test_camera_satellite_plugins.py  test_cli.bat  test_cross_platform.py  test_graph_generation.bat  test_hardware_abstraction.py  test_hardware_with_without.py  test_logging_reporting.py  test_opsec_export.py  test_orchestrator_standalone.py  test_process_manager.py  test_safety_interlocks.py  test_sdr_plugin.py  test_wifi_plugin.py  verify_sdr_module.py  verify_wifi_registration.py
obscura/examples/: cross_platform_demo.py
obscura/fixtures/: README.md  generate_test_iq.py
obscura/obscura/: api.py  attacks.py  cli.py  config.py  export_formats.py  hardware.py  injection.py  main.py  opsec_logging.py  orchestrator.py  process_manager.py  reporting.py  satellite_ui.py  threads.py  traits.json  tui.py  ui.py  utils.py  vendors.json  vulnerability_db.json
obscura/obscura/attack_plugins/: advanced_attacks.py  ble_attacks.py  camera_attacks.py  repeaterautopatch_attacks.py  satellite_atttack.py  sdr_attacks.py  wifi_attacks.py
obscura/obscura/templates/: index.html
obscura/tests/: README.md  conftest.py  test_ble.py  test_orchestrator.py  test_reporting.py  test_sdr_attacks.py  test_traits.json  test_wifi.py
offsec-jenkins/: .dockerignore  .gitignore  CTF_READY_VERIFICATION.md  DOCKER_USAGE.md  Dockerfile  EXPORT_VERIFICATION.md  FINAL_VALIDATION_COMPLETE.md  JENKINSBREAKER_INTEGRATION.md  QUICK_START_JENKINS_LAB.md  README.md  SECURITY_CONTROLS_VERIFICATION.md  STEP_4_COMPLETE.md  UNIT_TESTS_VERIFICATION.md  check_fixtures.py  decrypt.py  decrypt_enhanced.py  decrypt_pro.py  demo_localhost.bat  docker-compose.yml  docker-examples.sh  extract_and_test_jenkins.bat  generate_test_fixtures.py  requirements.txt  start_jenkins_lab.sh  sync_to_original_repo.bat  test_cli.py  test_comprehensive.py  test_ctf_scenario.py  test_docker_validation.bat  test_docker_validation.sh  test_export.py  test_export_functions.py  test_jenkins_lab.bat  test_jenkins_lab.sh  test_original_repo.bat  test_pathlib.py  test_remote.py  test_scan.py  test_security_controls.bat  test_security_manual.py  (+2 more)
offsec-jenkins/tests/: JENKINS_LAB_TESTING.md  README.md  conftest.py  test_cli.py  test_export.py  (+1 more)
(+30 files in other folders)
