[project]
name = "obscura"
version = "0.1.0"
description = "Wireless attack toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }

authors = [
    { name = "Ridpath" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Security Professionals",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux"
]

dependencies = [
    "textual>=3.2.0,<4.0.0",
    "rich>=13.3.3,<15.0.0",
    "scapy==2.5.0",
    "requests==2.31.0",
    "aiohttp==3.9.5",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "joblib==1.4.2",
    "opencv-python==4.9.0.80",
    "folium==0.16.0",
    "pyserial==3.5",
    "matplotlib==3.8.4",
    "gTTS==2.5.1",
    "soundfile==0.12.1",
    "cryptography==42.0.5",
    "graphviz==0.20.1",
    "plotly==5.20.0"
]

[project.optional-dependencies]
bluetooth = [
    "bluetooth-py3==0.1.1"
]

web = [
    "flask>=3.0.0"
]

cv = [
    "opencv-python==4.9.0.80"
]

gnuradio = [
    "gnuradio"
]

satellite = [
    "skyfield>=1.46",
    "orbit-predictor>=1.10.0",
    "satnogsclient>=0.9.0",
    "n2yo==0.0.5"
]

cve = [
    "pycvesearch"
]

[project.scripts]
obscura = "obscura.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "obscura*", "attack_plugins*" ]
